[package]
name = "travel"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.59"
uuid = "1.8.0"
users = { path = "../users" }
aws-sdk-dynamodb = "1.27.0"

[dev-dependencies]
utils = { path = "../../utils" }
test-utils = { path = "../../test-utils" }

[lib]
name = "travel"
path = "src/lib.rs"
