[package]
name = "travel"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.60"
uuid = "1.8.0"
serde = { version = "1.0.197", features = ["derive"] }
users = { path = "../users" }
utils = { path = "../../utils" }
aws-sdk-dynamodb = "1.28.0"
chrono = "0.4.38"
tokio = "1.37.0"
mockall = "0.12.1"

[dev-dependencies]
test-utils = { path = "../../test-utils" }

[lib]
name = "travel"
path = "src/lib.rs"
