[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
uuid =  { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.197", features = ["derive"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.20.0"
tokio = { version = "1", features = ["full"] }
utils = { path = "../../utils" }
anyhow = "1.0.81"
mockall = "0.12.1"

[dev-dependencies]
test-utils = { path = "../../test-utils" }

[lib]
name = "users"
path = "src/lib.rs"
